--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@
 /tmp
 /out-tsc
 
+#configs
+/src/assets/**/*.json
+
 # dependencies
 /node_modules
+package-lock.json
 
 # IDEs and editors
 /.idea
