--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.1.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
